syntax = "proto3";

package koinos.services;

import "koinos/rpc/account_history/account_history_rpc.proto";
import "koinos/rpc/block_store/block_store_rpc.proto";
import "koinos/rpc/chain/chain_rpc.proto";
import "koinos/rpc/contract_meta_store/contract_meta_store_rpc.proto";
import "koinos/rpc/mempool/mempool_rpc.proto";
import "koinos/rpc/p2p/p2p_rpc.proto";
import "koinos/rpc/transaction_store/transaction_store_rpc.proto";

option go_package = "github.com/koinos/koinos-proto-golang/v2/koinos/services";

service koinos {
  // Account History
  rpc get_account_history(.koinos.rpc.account_history.get_account_history_request) returns (.koinos.rpc.account_history.get_account_history_response) {}

  // Block Store
  rpc get_blocks_by_id(.koinos.rpc.block_store.get_blocks_by_id_request) returns (.koinos.rpc.block_store.get_blocks_by_id_response) {}
  rpc get_blocks_by_height(.koinos.rpc.block_store.get_blocks_by_height_request) returns (.koinos.rpc.block_store.get_blocks_by_height_response) {}
  rpc get_highest_block(.koinos.rpc.block_store.get_highest_block_request) returns (.koinos.rpc.block_store.get_highest_block_response) {}

  // Chain
  rpc submit_block(.koinos.rpc.chain.submit_block_request) returns (.koinos.rpc.chain.submit_block_response) {}
  rpc submit_transaction(.koinos.rpc.chain.submit_transaction_request) returns (.koinos.rpc.chain.submit_transaction_response) {}
  rpc get_head_info(.koinos.rpc.chain.get_head_info_request) returns (.koinos.rpc.chain.get_head_info_response) {}
  rpc get_chain_id(.koinos.rpc.chain.get_chain_id_request) returns (.koinos.rpc.chain.get_chain_id_response) {}
  rpc get_fork_heads(.koinos.rpc.chain.get_fork_heads_request) returns (.koinos.rpc.chain.get_fork_heads_response) {}
  rpc read_contract(.koinos.rpc.chain.read_contract_request) returns (.koinos.rpc.chain.read_contract_response) {}
  rpc get_account_nonce(.koinos.rpc.chain.get_account_nonce_request) returns (.koinos.rpc.chain.get_account_nonce_response) {}
  rpc get_account_rc(.koinos.rpc.chain.get_account_rc_request) returns (.koinos.rpc.chain.get_account_rc_response) {}
  rpc get_resource_limits(.koinos.rpc.chain.get_resource_limits_request) returns (.koinos.rpc.chain.get_resource_limits_response) {}
  rpc invoke_system_call(.koinos.rpc.chain.invoke_system_call_request) returns (.koinos.rpc.chain.invoke_system_call_response) {}

  // Contract Meta Store
  rpc get_contract_meta(.koinos.rpc.contract_meta_store.get_contract_meta_request) returns (.koinos.rpc.contract_meta_store.get_contract_meta_response) {}

  // Mempool
  rpc get_pending_transactions(.koinos.rpc.mempool.get_pending_transactions_request) returns (.koinos.rpc.mempool.get_pending_transactions_response) {}
  rpc check_pending_account_resources(.koinos.rpc.mempool.check_pending_account_resources_request) returns (.koinos.rpc.mempool.check_pending_account_resources_response) {}

  // P2P
  rpc get_gossip_status(.koinos.rpc.p2p.get_gossip_status_request) returns (.koinos.rpc.p2p.get_gossip_status_response) {}

  // Transaction Store
  rpc get_transactions_by_id(.koinos.rpc.transaction_store.get_transactions_by_id_request) returns (.koinos.rpc.transaction_store.get_transactions_by_id_response) {}
}
